external-crates/move/crates/move-compiler/tests/move_2024/unit_test/expected_failure_constants_unbound@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E10003]: invalid attribute value
  ┌─ tests/move_2024/unit_test/expected_failure_constants_unbound.move:4:43
  │
4 │     #[test, expected_failure(abort_code = a::nonsense::foo, location = a::m)]
  │                                           ^^^^^^^^^^^^^^^^
  │                                           │
  │                                           Invalid value in attribute assignment
  │                                           Unbound module 'a::nonsense'

error[E10003]: invalid attribute value
  ┌─ tests/move_2024/unit_test/expected_failure_constants_unbound.move:8:43
  │
8 │     #[test, expected_failure(abort_code = a::nonsense::foo, location = a::m)]
  │                                           ^^^^^^^^^^^^^^^^
  │                                           │
  │                                           Invalid value in attribute assignment
  │                                           Unbound module 'a::nonsense'
